# test-ci-windows-latest

./: README.md
.github/workflows/: ci.yaml  ci.yml
conda-recipe/: meta.yaml  run_test.bat
simple/: CMakeLists.txt  simple_c.c  simple_cxx.cpp
test_ext/: CMakeLists.txt  setup.py
test_ext/src/: py.cpp
test_ext/test_ext/: __init__.py
